<resources>
    <string name="app_name" translatable="false">RoboGuide</string>

    <string name="btnSpeakHelloWorld" translatable="false">Hello World</string>
    <string name="btnSpeakLocations" translatable="false">Read locations</string>
    <string name="btnCancelSpeak" translatable="false">Cancel Speak</string>
    <string name="btnGotoHomeBase" translatable="false">Goto Home Base</string>
    <string name="btnExit" translatable="false">Exit App</string>
    <string name="bewetung_hinterlassen">Bewetung hinterlassen</string>
    <string name="wie_war_die_tour">Wie war die Tour?</string>
    <string name="it_was_ok">It was OK.</string>
    <string name="it_was_good">Es war gut!</string>
    <string name="es_war_schlecht">Es war schlecht!</string>
    <string name="tour_starten">Tour Starten</string>
    <string name="tour_abbrechen">Tour Abbrechen</string>
    <string name="erstelle_eine_individuelle_tour">Erstelle eine Individuelle Tour!</string>
    <string name="fortgeschrittene_tour">Fortgeschrittene Tour?</string>
    <string name="alle_abw_hlen">Alle Abwählen</string>
    <string name="alle_ausw_hlen">Alle Auswählen</string>
</resources>